[project]
name = "sra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
